Issue Details (XML | Word | Printable)

Key: SERVER-740
Type: Bug Bug
Status: Closed Closed
Resolution: Fixed
Priority: Major Major
Assignee: Eliot Horowitz
Reporter: Valerii Hiora
Votes: 0
Watchers: 1
Operations

If you were logged in you would be able to see more operations.
Core Server

Crash on geo search

Created: Mar 12 2010 07:53 AM UTC   Updated: Mar 22 2010 09:56 PM UTC
Component/s: Stability
Affects Version/s: 1.3.3
Fix Version/s: 1.3.4

File Attachments: 1. Zip Archive dump.zip (1.06 MB)

Environment: OS X 10.6.2

Backport: No


 Description  « Hide
On my specific data it always crashes on geo searching using:
db.points.find({ loc : { $near : [50, 50] }}) - crash
db.points.find({ loc : { $near : [50, 50] }}).limit(26) - works
db.points.find({ loc : { $near : [70, 70] }}) - works

Typical data is: { "_id" : ObjectId("4b9a36c3a5ff9d0cb900c20c"), "loc" : { "lat" : 54.72271, "lon" : 56.02658 } }
The problem is that I can't see which exactly data causes the problem.

Let me know if you need actual data and which method do you prefer to get it.

 All   Comments   Change History   git Commits      Sort Order: Ascending order - Click to sort in descending order
Eliot Horowitz added a comment - Mar 12 2010 09:51 AM UTC
The first think is can you send the server log?
Hard to know what "crash" means.

Valerii Hiora added a comment - Mar 12 2010 09:55 AM UTC
Sure, here it is:

Fri Mar 12 16:53:20 Got signal: 11 (Segmentation fault).
Fri Mar 12 16:53:20 Backtrace:
0x1001f0a5c 0x7fff88a1ceaa 0x80000000 0x1001b117d 0x1001a7698 0x10017a00a 0x1000bf7bc 0x10017bbb9 0x10017f3d4 0x100184c8a 0x1000b401e 0x100140b17 0x100145b65 0x1001fc11b 0x100208e64 0x7fff889f5f8e 0x7fff889f5e41
 0 mongod 0x00000001001f0a5c _ZN5mongo10abruptQuitEi + 332
 1 libSystem.B.dylib 0x00007fff88a1ceaa _sigtramp + 26
 2 ??? 0x0000000080000000 0x0 + 2147483648
 3 mongod 0x00000001001b117d _ZN5mongo9GeoSearch4execEv + 2413
 4 mongod 0x00000001001a7698 _ZNK5mongo9Geo2dType9newCursorERKNS_7BSONObjES3_i + 744
 5 mongod 0x000000010017a00a _ZNK5mongo9QueryPlan9newCursorERKNS_7DiskLocEi + 698
 6 mongod 0x00000001000bf7bc _ZN5mongo11UserQueryOp4initEv + 1676
 7 mongod 0x000000010017bbb9 _ZN5mongo12QueryPlanSet6Runner6initOpERNS_7QueryOpE + 25
 8 mongod 0x000000010017f3d4 _ZN5mongo12QueryPlanSet6Runner3runEv + 596
 9 mongod 0x0000000100184c8a _ZN5mongo12QueryPlanSet5runOpERNS_7QueryOpE + 74
 10 mongod 0x00000001000b401e _ZN5mongo8runQueryERNS_7MessageERNS_12QueryMessageERNS_5CurOpE + 2238
 11 mongod 0x0000000100140b17 _ZN5mongo13receivedQueryERNS_6ClientERNS_10DbResponseERNS_7MessageE + 647
 12 mongod 0x0000000100145b65 _ZN5mongo16assembleResponseERNS_7MessageERNS_10DbResponseERK11sockaddr_in + 3973
 13 mongod 0x00000001001fc11b _ZN5mongo10connThreadEv + 619
 14 mongod 0x0000000100208e64 thread_proxy + 132
 15 libSystem.B.dylib 0x00007fff889f5f8e _pthread_start + 331
 16 libSystem.B.dylib 0x00007fff889f5e41 thread_start + 13
Fri Mar 12 16:53:20 dbexit:
Fri Mar 12 16:53:20 shutdown: going to close listening sockets...
Fri Mar 12 16:53:20 going to close listening socket: 4
Fri Mar 12 16:53:20 Listener on port 27017 aborted
Fri Mar 12 16:53:20 going to close listening socket: 5
Fri Mar 12 16:53:20 Listener on port 28017 aborted.
Fri Mar 12 16:53:20 shutdown: going to flush oplog...
Fri Mar 12 16:53:20 shutdown: going to close sockets...
Fri Mar 12 16:53:20 shutdown: waiting for fs preallocator...
Fri Mar 12 16:53:20 shutdown: closing all files...
Fri Mar 12 16:53:20 closeAllFiles() finished
Fri Mar 12 16:53:20 shutdown: removing fs lock...
Fri Mar 12 16:53:20 dbexit: really exiting now
ERROR: Client::~Client _context should be NULL

Eliot Horowitz made changes - Mar 12 2010 10:27 AM UTC
Field Original Value New Value
Status Open [ 1 ] Resolved [ 5 ]
Fix Version/s 1.3.4 [ 10124 ]
Resolution Fixed [ 1 ]
auto added a comment - Mar 12 2010 10:27 AM UTC
Author:{'login': 'erh', 'name': 'Eliot Horowitz', 'email': 'eliot@10gen.com'}
Message: logRotate command to rotate logs SERVER-740
http://github.com/mongodb/mongo/commit/74e22e9d7377e1a275066a6f561f5955b0a80d18

Eliot Horowitz added a comment - Mar 12 2010 10:41 AM UTC
Ok - not seeing it right away.
If you can send a mongodump of that collection, that would help a lot.
you can attach it here or open a SUPPORT case it its senstive

Valerii Hiora added a comment - Mar 12 2010 11:02 AM UTC
I've extracted only locations

Valerii Hiora made changes - Mar 12 2010 11:02 AM UTC
Attachment dump.zip [ 10173 ]
auto added a comment - Mar 12 2010 11:22 AM UTC
Author:{'login': 'erh', 'name': 'Eliot Horowitz', 'email': 'eliot@10gen.com'}
Message: fix boundary geo case SERVER-740
http://github.com/mongodb/mongo/commit/5cb4789317b8e93dd4127b22c9e52ead4d9aba69

Eliot Horowitz added a comment - Mar 12 2010 11:22 AM UTC
closed before by accident

Eliot Horowitz made changes - Mar 12 2010 11:22 AM UTC
Resolution Fixed [ 1 ]
Status Resolved [ 5 ] Reopened [ 4 ]
Eliot Horowitz added a comment - Mar 12 2010 11:22 AM UTC
now actually fixed

Eliot Horowitz made changes - Mar 12 2010 11:22 AM UTC
Status Reopened [ 4 ] Resolved [ 5 ]
Resolution Fixed [ 1 ]
Valerii Hiora added a comment - Mar 12 2010 02:23 PM UTC
Thanks for quick fix.

Repository Revision Date Author/Committer Message
server 74e22e9... Fri Mar 12 15:28:07 UTC 2010 Eliot Horowitz / Eliot Horowitz logRotate command to rotate logs SERVER-740
Files Changed
MODIFY db/dbcommands_admin.cpp

Repository Revision Date Author/Committer Message
server 5cb4789... Fri Mar 12 16:23:15 UTC 2010 Eliot Horowitz / Eliot Horowitz fix boundary geo case SERVER-740
Files Changed
MODIFY db/index_geo2d.cpp

Hubert Lepicki added a comment - Mar 12 2010 05:20 PM UTC
I was just going to report that, was also happening on Linux 64 bit. Will check if it's gone now.

Eliot Horowitz made changes - Mar 22 2010 09:56 PM UTC
Status Resolved [ 5 ] Closed [ 6 ]