logRotate command to rotate logs SERVER-740